--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="top">
         <div class="imgBox">
           <div class="box">
-            <img src="/photo.jpg" alt="profilePhoto" />
+            <img src="photo.jpg" alt="profilePhoto" />
           </div>
         </div>
         <div class="profileText">
